--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "types": "bindings/node",
   "scripts": {
     "build": "npx tree-sitter generate",
-    "test": "npx tree-sitter generate && npx tree-sitter test"
+    "test": "npx tree-sitter generate && npx tree-sitter test",
+    "install": "node-gyp-build",
+    "prebuildify": "prebuildify --napi --strip"
   },
-  "author": "6cdh",
+  "author": "UnbSky",
   "license": "MIT",
-  "dependencies": {
-    "nan": "^2.19.0"
-  },
-  "devDependencies": {
-    "tree-sitter-cli": "0.21.0"
-  },
   "tree-sitter": [
     {
       "scope": "source.scheme",
@@ -24,5 +20,38 @@
         "ss"
       ]
     }
+  ],
+  "gypfile": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UnbSky/tree-sitter-scheme.git"
+  },
+  "bugs": {
+    "url": "https://github.com/UnbSky/tree-sitter-scheme/issues"
+  },
+  "homepage": "https://github.com/UnbSky/tree-sitter-scheme#readme",
+  "dependencies": {
+    "node-addon-api": "^7.1.0",
+    "node-gyp-build": "^4.8.0"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.0"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
+  },
+  "devDependencies": {
+    "tree-sitter-cli": "^0.22.6",
+    "prebuildify": "^6.0.0"
+  },
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**"
   ]
 }
